# SolFilOsc

./: .gitignore  README.md  preprocessing.sh  pyproject.toml  requirements.txt
CNN/BestFit/BestFitModel/: keras_metadata.pb  saved_model.pb
CNN/BestFit/BestFitModel/variables/: variables.index
CNN/Confidence/ConfModel/: keras_metadata.pb  saved_model.pb
CNN/Confidence/ConfModel/variables/: variables.index
data_processing/: create_data_cube_file.py  create_list_files_day.py  create_times_array.py  derotate.py  fits_utils.py  limb_darkening.py  post_process_data_cube.py  preprocess_data.py
docs/: project_reorganization.tex
notebooks/: analysis_with_CNN.ipynb
src/solfilosc/: __init__.py
src/solfilosc/analysis/: __init__.py  cli.py  cnn.py  constants.py  cp_calibration.py  degradation.py  detection.py  events.py  pipeline.py  plotting.py  roi.py  writers.py
src/solfilosc/data_processing/: __init__.py  create_data_cube_file.py  create_list_files_day.py  create_times_array.py  decorators.py  derotate.py  file_size_filter.py  limb_darkening.py  post_process_data_cube.py  preprocess_data.py
src/solfilosc/mapping/: fits2map.py  fits_obj.py  make_map.py  map_util.py  plot_helio.py  plot_map.py  transform_map.py
