[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solfilosc"
version = "0.1.0"
description = "Solar filament oscillation preprocessing and CNN analysis pipeline"
requires-python = ">=3.10"

[project.scripts]
solfilosc-analysis = "solfilosc.analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
